<resources>
    <string name="app_name">欢乐锄大地</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="name">请输入昵称</string>
    <string name="help">帮助</string>
    <string name="create">创建房间</string>
    <string name="join">加入房间</string>
    <string name="rule">一、基本玩法\n 
1.牌数：一副扑克牌52张（去掉大小王），每局4名玩家，每人13张牌。\n
2.牌型说明：\n 
(1)单张：任何一张单牌。\n 
(2)一对：二张牌点相同的牌。\n 
(3)三个：三张牌点相同的牌。\n 
(4)顺子：连续五张牌点相邻的牌，顺的张数必须是5张，A既可在顺的最后，也可在顺的最前，但不能在顺的中间，如"JQKA2"不是顺。\n 
(5)同花顺：由相同花色的五张牌组成，但不是顺，称"同花"，如红桃"278JK"。\n
(6)葫芦：三个带一对，例如：99955。\n 
(7)金刚：四个带单张，例如：99995。\n
(8)同花顺：每张牌的花色都相同的顺称为同花顺。\n 
3.牌的大小:\n
(1)只有张数相同的牌可以比较大小，例如：99 > 88 ，J > 10 ，但不能比较：99 和 10。\n
(2)单张牌的大小：首先比较牌点，如果牌点相同再比较牌的花色。牌点从大到小依次为： 2 A K Q J 10 9 8 7 6 5 4 3 。花色从大到小的顺序为：黑桃>红心>梅花>方块。\n
(3)其它牌型在进行比较时都取其中一张最大的牌按单张的方式进行比较：\n
三个带一对时，取三个中的最大一张。\n
四个带单张时，取四个中最大的一张进行比较。\n
顺子中取最大的一张进行比较。\n
(4)五张牌的牌型中，同花顺>金刚>葫芦>同花>顺子。\n
二、计分规则\n
在其中一方手中的牌全部出完后开始计分，计分过程举例如下：\n
1.假设A、B、C、D四个玩家在一局游戏结束后，手中剩余的牌张数分别为：A有5张 B有8张 C有0张 D有12张\n
2.先根据每家手中剩余的牌张数计算牌分，假设剩余牌张数为n：\n
(1)n小于8时，牌分为n\n
(2)n大于等于8且小于10时，牌分为2n\n
(3)n大于等于10且小于13时，牌分为3n\n
(4)n等于13时，牌分为4n\n
根据上述算法，ABCD的牌分分别如下：\n
A:5分\n
B:8 x 2 = 16分\n
C:0分\n
D:12 x 3 = 36分\n
3.按下面的公式计算最后得分：\n
A的得分=(B的牌分-A的牌分)+(C的牌分-A的牌分)+(D的牌分-A的牌分)\n
B的得分=(A的牌分-B的牌分)+(C的牌分-B的牌分)+(D的牌分-B的牌分)\n
C的得分=(A的牌分-C的牌分)+(B的牌分-C的牌分)+(D的牌分-C的牌分)\n
D的得分=(A的牌分-D的牌分)+(B的牌分-D的牌分)+(C的牌分-D的牌分)\n
按上述公式计算得到ABCD的实际得分为：\n
A: (16 - 5) + (0 - 5) + (36 - 5) = 11 + -5 + 31 = 37分\n
B: (5 - 16) + (0 - 16) + (36 - 16) = -11 + -16 + 20 = -7分\n
C: (5 - 0) + (16 - 0) + (36 - 0) = 5 + 16 + 36 = 57分\n
D: (5 - 36) + (16 - 36) + (0 - 36) = -31 + -20 + -36 = -87分\n
</string>

</resources>
